force-app/main/default/objects/genesis__Applications__c/fields/genesis__Yield__c.field-meta.xml
<CustomField>
    <fullName>genesis__Yield__c</fullName>
    <label>Yield</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>