force-app/main/default/objects/genesis__Applications__c/fields/genesis__Yield_After_Payout__c.field-meta.xml
<CustomField>
    <fullName>genesis__Yield_After_Payout__c</fullName>
    <description>This is the yield of the application after considering the payouts that are being made by the lessor.</description>
    <label>Yield After Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>