force-app/main/default/objects/genesis__Applications__c/fields/GSA_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>GSA_Contact_List__c</fullName>
    <label>GSA Contact List</label>
    <type>TextArea</type>
</CustomField>