force-app/main/default/objects/genesis__Applications__c/fields/Home_Imaprovements_Amount__c.field-meta.xml
<CustomField>
    <fullName>Home_Imaprovements_Amount__c</fullName>
    <label>Home Improvements Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>