force-app/main/default/objects/genesis__Applications__c/fields/House_Dwelling_Description__c.field-meta.xml
<CustomField>
    <fullName>House_Dwelling_Description__c</fullName>
    <label>House Dwelling Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Multi-Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>