force-app/main/default/objects/genesis__Applications__c/fields/Income_Consistent_with_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Income_Consistent_with_Declaration__c</fullName>
    <label>Income Consistent with Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>