force-app/main/default/objects/genesis__Applications__c/fields/Interest_Cover_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cover_Ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Cover Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>