force-app/main/default/objects/genesis__Applications__c/fields/Interest_Only_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Commentary__c</fullName>
    <label>Interest Only Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>