force-app/main/default/objects/genesis__Applications__c/fields/Interest_Only_Other_Reason_explain__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Other_Reason_explain__c</fullName>
    <label>Interest Only Other Reason explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>