force-app/main/default/objects/genesis__Applications__c/fields/Interest_Only_Reason_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Reason_Render_Check__c</fullName>
    <formula>IF(OR(TEXT(Repayment_Type__c) == &apos;Interest Only reverting to Principal and Interest&apos;, TEXT(Repayment_Type__c) == &apos;Interest Only&apos;, TEXT(Repayment_Type__c) == &apos;Prepaid Interest&apos;),  ISPICKVAL(Interest_only_reason__c, &apos;&apos;), FALSE)</formula>
    <label>Interest Only Reason Render Check</label>
    <type>Checkbox</type>
</CustomField>