force-app/main/default/objects/genesis__Applications__c/fields/Interest_Only_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Suitable__c</fullName>
    <label>Interest Only Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>