force-app/main/default/objects/genesis__Applications__c/fields/Interest_Only_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Suitable_Rule_Check__c</fullName>
    <description>Interest Only Suitable Rule Check</description>
    <formula>IF(ISPICKVAL(Repayment_Type__c,&apos;Interest Only reverting to Principal and Interest&apos;),TRUE,IF(ISPICKVAL(Repayment_Type__c,&apos;Interest Only&apos;),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Only Suitable Rule Check</label>
    <type>Checkbox</type>
</CustomField>