force-app/main/default/objects/genesis__Applications__c/fields/Interest_type__c.field-meta.xml
<CustomField>
    <fullName>Interest_type__c</fullName>
    <label>Interest type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Rate</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>