force-app/main/default/objects/genesis__Applications__c/fields/Interest_type_duration__c.field-meta.xml
<CustomField>
    <fullName>Interest_type_duration__c</fullName>
    <label>Interest type duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>