force-app/main/default/objects/genesis__Applications__c/fields/Is_the_Application_Form_fully_completed__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Application_Form_fully_completed__c</fullName>
    <label>Is the Application Form fully completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>