force-app/main/default/objects/genesis__Applications__c/fields/Lenders_Mortgage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Lenders_Mortgage_Insurance__c</fullName>
    <label>Lenders Mortgage Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>