force-app/main/default/objects/genesis__Applications__c/fields/Lenders_Mortgage_Insurance_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Lenders_Mortgage_Insurance_Rule_Check__c</fullName>
    <description>Lenders Mortgage Insurance Rule Check</description>
    <formula>IF(ISPICKVAL(Lenders_Mortgage_Insurance__c,&apos;Yes&apos;),&apos;Render&apos;,&apos;Not Rendered&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lenders Mortgage Insurance Rule Check</label>
    <type>Text</type>
</CustomField>