force-app/main/default/objects/genesis__Applications__c/fields/Loan_Assesment_Commentary_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Commentary_Pricing__c</fullName>
    <label>Loan Assesment Commentary Pricing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>