force-app/main/default/objects/genesis__Applications__c/fields/Loan_Status_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status_Commentary__c</fullName>
    <label>Loan Status Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>