force-app/main/default/objects/genesis__Applications__c/fields/LVR_Used_for_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LVR_Used_for_Pricing__c</fullName>
    <formula>IF((genesis__Loan_Amount__c &gt; 0),(IF(Actual_Security_Value__c &gt; 0,(genesis__Loan_Amount__c/Actual_Security_Value__c)
,(IF(Expected_security_value__c &gt; 0,(genesis__Loan_Amount__c/Expected_security_value__c),NULL)))),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LVR Used for Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>