force-app/main/default/objects/genesis__Applications__c/fields/Matrix_Rate__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Rate__c</fullName>
    <label>Matrix Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>