force-app/main/default/objects/genesis__Applications__c/fields/Matrix_Rate_Exception_Check__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Rate_Exception_Check__c</fullName>
    <formula>IF(Matrix_Rate__c &lt; genesis__Interest_Rate__c, &apos;L&apos;, IF(Matrix_Rate__c &gt; genesis__Interest_Rate__c, &apos;G&apos;, &apos;E&apos;))</formula>
    <label>Matrix Rate Exception Check</label>
    <type>Text</type>
</CustomField>