force-app/main/default/objects/genesis__Applications__c/fields/Monthly_Living_Expenses_Used__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Living_Expenses_Used__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Monthly Living Expenses Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>