force-app/main/default/objects/genesis__Applications__c/fields/Monthly_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayments__c</fullName>
    <label>Monthly Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>