force-app/main/default/objects/genesis__Applications__c/fields/NCCP_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>NCCP_Status_Check__c</fullName>
    <formula>IF( ISPICKVAL(NCCP_status_list__c,&quot;&quot;) ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCCP Status Check</label>
    <type>Checkbox</type>
</CustomField>