force-app/main/default/objects/genesis__Applications__c/fields/Non_Regulated_Product_Lender_s_Legals__c.field-meta.xml
<CustomField>
    <fullName>Non_Regulated_Product_Lender_s_Legals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non Regulated Product Lender&apos;s Legals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>