force-app/main/default/objects/genesis__Applications__c/fields/Other_Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Dwelling_Type__c</fullName>
    <label>Other Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>