force-app/main/default/objects/genesis__Applications__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <label>Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>