force-app/main/default/objects/genesis__Applications__c/fields/Paid_Subsequent_Drawdown_PrepaidInterest__c.field-meta.xml
<CustomField>
    <fullName>Paid_Subsequent_Drawdown_PrepaidInterest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid Subsequent Drawdown PrepaidInterest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>