force-app/main/default/objects/genesis__Applications__c/fields/Pending_Broker__c.field-meta.xml
<CustomField>
    <fullName>Pending_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=8&amp;projectKey=AMS&amp;modal=detail&amp;selectedIssue=AMS-714
RJohnston - 14/4/21
For the team to be aware if we are waiting documents from the broker</description>
    <label>Pending Broker</label>
    <type>Checkbox</type>
</CustomField>