force-app/main/default/objects/genesis__Applications__c/fields/PEXA_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>PEXA_Transaction_Fee__c</fullName>
    <defaultValue>59.07</defaultValue>
    <label>PEXA Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>