force-app/main/default/objects/genesis__Applications__c/fields/PrePaid_Interest_Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>PrePaid_Interest_Amount_Funded__c</fullName>
    <formula>IF(CL_Contract__c != null &amp;&amp; First_Drawdown_Complete__c = true,First_Tranche_Prepaid_Interest__c+Paid_Subsequent_Drawdown_PrepaidInterest__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrePaid Interest Amount Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>