force-app/main/default/objects/genesis__Applications__c/fields/PrePaid_Interest_Remaining_for_funding__c.field-meta.xml
<CustomField>
    <fullName>PrePaid_Interest_Remaining_for_funding__c</fullName>
    <formula>IF(CL_Contract__c != null,Subsequent_Drawdown_Prepaid_Interest_Sum__c-CL_Contract__r.Paid_Prepaid_Interest__c+First_Tranche_Prepaid_Interest__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrePaid Interest Remaining for funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>