force-app/main/default/objects/genesis__Applications__c/fields/Primary_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approval_Comments__c</fullName>
    <label>Primary Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>