force-app/main/default/objects/genesis__Applications__c/fields/Primary_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approval_Date__c</fullName>
    <label>Primary Approval Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>