force-app/main/default/objects/genesis__Applications__c/fields/Primary_Approval_Date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approval_Date_for_Reports__c</fullName>
    <formula>DATE(VALUE( RIGHT(Primary_Approval_Date__c,4) ),
      VALUE(LEFT(
MID(Primary_Approval_Date__c, FIND(&quot;/&quot;, Primary_Approval_Date__c) + 1, 4),
FIND(&quot;/&quot;, MID(Primary_Approval_Date__c, FIND(&quot;/&quot;, Primary_Approval_Date__c) + 1, 4)) - 1 )),
VALUE(LEFT(Primary_Approval_Date__c, FIND(&quot;/&quot;, Primary_Approval_Date__c)-1))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approval Date for Reports</label>
    <type>Date</type>
</CustomField>