force-app/main/default/objects/genesis__Applications__c/fields/Proposed_repayment_method_list__c.field-meta.xml
<CustomField>
    <fullName>Proposed_repayment_method_list__c</fullName>
    <defaultValue>(&quot;Direct Debit&quot;)</defaultValue>
    <label>Proposed repayment method list</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bpay</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>