force-app/main/default/objects/genesis__Applications__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>