force-app/main/default/objects/genesis__Applications__c/fields/Purchase_Goods_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Goods_Amount__c</fullName>
    <label>Purchase Goods Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>