force-app/main/default/objects/genesis__Applications__c/fields/Purchase_Off_the_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Off_the_Plan_Amount__c</fullName>
    <label>Purchase Off the Plan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>