force-app/main/default/objects/genesis__Applications__c/fields/Re_documentation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Re_documentation_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Re-documentation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>