force-app/main/default/objects/genesis__Applications__c/fields/Reassess_Fails__c.field-meta.xml
<CustomField>
    <fullName>Reassess_Fails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassess Fails</label>
    <type>Checkbox</type>
</CustomField>