force-app/main/default/objects/genesis__Applications__c/fields/Recommend_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Comments__c</fullName>
    <label>Recommend Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>