force-app/main/default/objects/genesis__Applications__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <label>Recommended By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>