force-app/main/default/objects/genesis__Applications__c/fields/Recommended_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Date__c</fullName>
    <label>Recommended Date</label>
    <type>Date</type>
</CustomField>