force-app/main/default/objects/genesis__Applications__c/fields/Recommended_Date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Date_for_Reports__c</fullName>
    <description>RJohnston 7/6/21
For reporting the recommended date as original field wasn&apos;t a date field
https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=8&amp;projectKey=AMS&amp;modal=detail&amp;selectedIssue=AMS-746</description>
    <formula>DATEVALUE(Recommended_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended Date for Reports</label>
    <type>Date</type>
</CustomField>