force-app/main/default/objects/genesis__Applications__c/fields/Recommender_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Recommender_s_Email_Address__c</fullName>
    <label>Recommender&apos;s Email Address</label>
    <type>Email</type>
</CustomField>