force-app/main/default/objects/genesis__Applications__c/fields/Refinance_Debt_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Debt_Consolidation__c</fullName>
    <formula>Refinance_Debt_Consolidation_Total__c / genesis__Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinance Debt Consolidation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>