force-app/main/default/objects/genesis__Applications__c/fields/Refinance_Debt_Consolidation_Total__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Debt_Consolidation_Total__c</fullName>
    <label>Refinance Debt Consolidation Total</label>
    <summarizedField>Refinance_Loan_Purpose__c.Refinance_Consolidation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Refinance_Loan_Purpose__c.Refinance_Type__c</field>
        <operation>equals</operation>
        <value>Debt Consolidation</value>
    </summaryFilterItems>
    <summaryForeignKey>Refinance_Loan_Purpose__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>