force-app/main/default/objects/genesis__Applications__c/fields/Refinance_Equity_Release__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Equity_Release__c</fullName>
    <label>Refinance Equity Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Business Purpose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>