force-app/main/default/objects/genesis__Applications__c/fields/Refinance_Equity_Release_Percent__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Equity_Release_Percent__c</fullName>
    <formula>Refinance_Equity_Release_Total__c / genesis__Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinance Equity Release Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>