force-app/main/default/objects/genesis__Applications__c/fields/Refinance_Equity_Release_Total__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Equity_Release_Total__c</fullName>
    <formula>Business_Purpose_Total__c +  Cash_Out_Purpose_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinance Equity Release Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>