force-app/main/default/objects/genesis__Applications__c/fields/Refinance_purpose_list__c.field-meta.xml
<CustomField>
    <fullName>Refinance_purpose_list__c</fullName>
    <label>Refinance purpose list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refinance - Business Purposes</fullName>
            </value>
            <value>
                <fullName>Refinance - Cash Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>