force-app/main/default/objects/genesis__Applications__c/fields/Regulated_Product_Lender_s_Legals__c.field-meta.xml
<CustomField>
    <fullName>Regulated_Product_Lender_s_Legals__c</fullName>
    <label>Regulated Product Lender&apos;s Legals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>