force-app/main/default/objects/genesis__Applications__c/fields/Regulated_Unregulated__c.field-meta.xml
<CustomField>
    <fullName>Regulated_Unregulated__c</fullName>
    <label>NCCP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Non Regulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>