force-app/main/default/objects/genesis__Applications__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Rejected By</label>
    <type>TextArea</type>
</CustomField>