force-app/main/default/objects/genesis__Applications__c/fields/Rejected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Comment__c</fullName>
    <label>Rejected Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>