force-app/main/default/objects/genesis__Applications__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <label>Rejected Date</label>
    <type>TextArea</type>
</CustomField>