force-app/main/default/objects/genesis__Applications__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal and Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only reverting to Principal and Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>