force-app/main/default/objects/genesis__Applications__c/fields/RepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmount__c</fullName>
    <formula>genesis__Loan_Amount__c  /  ((((1+genesis__Interest_Rate__c / 100/12) ^  genesis__Term__c ) - 1 ) / ( genesis__Interest_Rate__c  / 100 / 12 *  (( 1 + genesis__Interest_Rate__c  / 12 / 100 ) ^  genesis__Term__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepaymentAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>