force-app/main/default/objects/genesis__Applications__c/fields/Restrict_Redraw__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Redraw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RJohnston 30/8/21 https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=8&amp;projectKey=AMS&amp;modal=detail&amp;selectedIssue=AMS-847
To ensure any loan that can&apos;t request redraw is stopped from doing so</description>
    <label>Restrict Redraw</label>
    <type>Checkbox</type>
</CustomField>