force-app/main/default/objects/genesis__Applications__c/fields/Risk_grade_list__c.field-meta.xml
<CustomField>
    <fullName>Risk_grade_list__c</fullName>
    <label>Risk grade list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Near Prime</fullName>
            </value>
            <value>
                <fullName>Near Prime +</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Specialist +</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
                <isActive>false</isActive>
                <label>Advance</label>
            </value>
            <value>
                <fullName>Advance Max</fullName>
                <isActive>false</isActive>
                <label>Advance Max</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <isActive>false</isActive>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Recovery</fullName>
                <isActive>false</isActive>
                <label>Recovery</label>
            </value>
            <value>
                <fullName>Recovery Max</fullName>
                <isActive>false</isActive>
                <label>Recovery Max</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>