force-app/main/default/objects/genesis__Applications__c/fields/Rule_Manual_Data__c.field-meta.xml
<CustomField>
    <fullName>Rule_Manual_Data__c</fullName>
    <label>Rule Manual Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>