force-app/main/default/objects/genesis__Applications__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Mortgage Manager</fullName>
            </value>
            <value>
                <fullName>Online Channel</fullName>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>Simpology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>