force-app/main/default/objects/genesis__Applications__c/fields/Sales_Channel_type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Channel type</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Sales Channel type)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>