force-app/main/default/objects/genesis__Applications__c/fields/Satisfactory_Explanation_Provided__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Explanation_Provided__c</fullName>
    <label>Satisfactory Explanation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>