force-app/main/default/objects/genesis__Applications__c/fields/Secondary_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approval_Comments__c</fullName>
    <label>Secondary Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>