force-app/main/default/objects/genesis__Applications__c/fields/Secondary_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approval_Date__c</fullName>
    <label>Secondary Approval Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>