force-app/main/default/objects/genesis__Applications__c/fields/Secondary_Approval_Date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approval_Date_for_Reports__c</fullName>
    <formula>DATEVALUE(Secondary_Approval_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Approval Date for Reports</label>
    <type>Date</type>
</CustomField>