force-app/main/default/objects/genesis__Applications__c/fields/Settlement_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Contact_Person__c</fullName>
    <description>RJohnston 4/1/21 - https://wingategroup.atlassian.net/browse/AMS-1140
To assist the settlements team in the settlement contact details for solicitor</description>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>