force-app/main/default/objects/genesis__Applications__c/fields/Settlement_Email__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Email__c</fullName>
    <description>RJohnston 4/1/21 - https://wingategroup.atlassian.net/browse/AMS-1140
To assist the settlements team in the settlement contact details for solicitor</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>